# leucent

./: .env.example  .gitignore  .prettierignore  AGENTS.md  DEPLOY.md  INFRA.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/ai-orchestrator/: README.md  package.json  pyproject.toml  railway.json
apps/ai-orchestrator/app/: config.py  main.py  prompt.py
apps/realtime-server/: Cargo.toml  Dockerfile  package.json  railway.json
apps/realtime-server/src/: auth.rs  config.rs  lifecycle.rs  main.rs  room.rs  routes.rs  storage.rs  yjs_ws.rs
apps/sandbox-provisioner/: Dockerfile  README.md  package.json  pyproject.toml  railway.json  sandbox-base.Dockerfile
apps/sandbox-provisioner/app/: config.py  docker_runtime.py  main.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
apps/web/src/app/: apple-icon.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/api/auth/[...path]/: route.ts
apps/web/src/app/api/candidate/profile/: route.ts
apps/web/src/app/api/interviews/: route.ts
apps/web/src/app/api/interviews/[id]/: route.ts
apps/web/src/app/api/interviews/[id]/end/: route.ts
apps/web/src/app/candidate/: page.tsx
apps/web/src/app/candidate/signup/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/features/: page.tsx
apps/web/src/app/interviews/[id]/conduct/: console-client.tsx  page.tsx
apps/web/src/app/interviews/[id]/replay/: page.tsx  replay-client.tsx
apps/web/src/app/interviews/[id]/upgrade/: page.tsx  upgrade-client.tsx
apps/web/src/app/interviews/[id]/work/: page.tsx  workspace-client.tsx
apps/web/src/app/interviews/new/: interview-creation-panel.tsx  new-interview-form.tsx  page.tsx
apps/web/src/app/join/[token]/: join-form.tsx  page.tsx
apps/web/src/app/login/: login-form.tsx  page.tsx
apps/web/src/app/settings/: layout.tsx  page.tsx  settings-sidebar.tsx
apps/web/src/app/settings/organization/: organization-settings-panel.tsx  page.tsx
apps/web/src/app/settings/user/: page.tsx  user-settings-panel.tsx
apps/web/src/app/signup/: page.tsx  signup-form.tsx
apps/web/src/app/work/signup/: page.tsx
apps/web/src/components/: AiChatPanel.tsx  DeleteInterviewButton.tsx  SignOutButton.tsx  SiteShell.tsx
apps/web/src/lib/: auth-client.ts  auth.ts  db.ts  ensure-active-organization.ts  env.ts  interview-invites.ts  interview-participants.ts  marketing-features.ts  realtime-client.ts  realtime-token.ts  replay-store.ts  sandbox-client.ts  sandbox-templates.ts  session.ts
apps/web/test/lib/: env.test.ts  invite-token.test.ts  realtime-token.test.ts  replay-store.test.ts
infra/: docker-compose.yml
scripts/: smoke.sh
(+7 files in other folders)
