[project]
name = "leucent-ai-orchestrator"
version = "0.0.0"
description = "Leucent AI orchestrator: LiteLLM-backed prompt assembly + SSE streaming."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "litellm>=1.52",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3.6",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sse-starlette>=2.1",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
