[package]
name = "leucent-realtime"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "leucent-realtime"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
futures-util = "0.3"
bytes = "1"
dashmap = "6"
once_cell = "1"
yrs = "0.21"
y-sync = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
jsonwebtoken = "9"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
