[project]
name = "leucent-sandbox-provisioner"
version = "0.0.0"
description = "Per-interview Docker sandbox + Neon branch lifecycle service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "docker>=7.1",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
